--- a/src/server/ntp.conf
+++ b/src/server/ntp.conf
@@ -9,41 +9,19 @@ filegen loopstats file loopstats type day enable
 filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
 
-# You do need to talk to an NTP server or two (or three).
+#These point to upstream NTP servers
 #server ntp.your-provider.example
 pool 0.ubuntu.pool.ntp.org iburst
 pool 1.ubuntu.pool.ntp.org iburst
 pool 2.ubuntu.pool.ntp.org iburst
 pool 3.ubuntu.pool.ntp.org iburst
+#Following two lines use the system clock if no connection
+#to ubuntu ntp pools can be made
 server 127.127.1.0
 server 127.127.1.0 stratum 8
 
 # Use Ubuntu's ntp srever as a fallback
 pool ntp.ubuntu.com
 
-# Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
-# details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
-# might also be helpful.
-#
-# Note that "restrict" applies to both servers and clients, so a configuration
-# that might be intended to block requests from certain clients could also end
-# up blocking replies from your own upstream servers.
-
-# By default, exchange time with everybody, but don't allow configuration.
-#restrict -4 default kod notrap nomodify nopeer noquery
-#restrict -6 default kod notrap nomodify nopeer noquery
-
-# Local users may interrogate the ntp server more closely.
-#restrict 127.0.0.1
-#restrict ::1
-
-# Clients from this (example!) subnet have unlimited access, but only if
-# cryptographically authenticated.
-#restrict 192.168.123.0 mask 255.255.255.0 notrust
-
-# If you want to provide time to your local subnet, change the next line.
-# (Again, the address is an example only.)
-broadcast 192.168.1.0 netmask 255.255.0.0
-
-# If you want to listen to time broadcasts on your local subnet, de-comment the
-# next lines.  Please do this only if you trust everybody on the network!
+#This shouldn't be necessary, keeping in case we need it
+#broadcast 192.168.1.0 netmask 255.255.0.0
