Updated client ntp configuration to include minpoll and maxpoll

--- a/src/client/ntp.conf
+++ b/src/client/ntp.conf
@@ -13,4 +13,4 @@ filegen clockstats file clockstats type day enable
 
 #Change the following line to point to the IP of your server
 #If you are using a VM it must point to the VM, not the host
-server 192.168.1.100 iburst
+server 192.168.1.100 iburst minpoll 4 maxpoll 5
